# Esp32-Projects

./: .coverage  .gitignore  BACKUP_CREATED.md  BACKUP_GUIDE.md  BROADCAST_ENGINE_REFACTORING_PLAN.md  COVERAGE_IMPROVEMENT_PLAN.md  COVERAGE_IMPROVEMENT_PLAN_OLD.md  COVERAGE_LIMITATIONS.md  COVERAGE_PROGRESS_REPORT.md  E2E_IMPLEMENTATION_SUMMARY.md  E2E_TEST_BUGFIXES.md  GENERATION_FAILURE_20260120.md  LOCAL_TESTING_PLAN.md  PHASE_1_2_3_COMPLETE.md  PHASE_4_COMPLETE.md  PHASE_4_COMPLETION_REPORT.md  PHASE_4_READY_FOR_REVIEW.md  PR_SUMMARY.md  README.md  REPOSITORY_STRUCTURE.md  SCRIPTS_REFERENCE.md  SESSION_COMPLETION_SUMMARY.md  STORY_INTEGRATION_FIX_PLAN.md  STORY_SYSTEM_FIX_PLAN.md  TESTING.md  TESTING_AND_LOGGING_GUIDE.md  TEST_ANALYSIS_REPORT.md  TEST_COVERAGE_EXPANSION_REPORT.md  TEST_FIXES_AND_LIMITATIONS.md  TEST_INFRASTRUCTURE_SUMMARY.md  TEST_REPORT_POST_REFACTORING.md  WEATHER_SYSTEM_PHASE2_COMPLETE.md  WEATHER_SYSTEM_PHASE3_COMPLETE.md  WEATHER_SYSTEM_PHASE4_COMPLETE.md  WEATHER_SYSTEM_PHASE5_COMPLETE.md  WIZARD_GUIDE.md  WORKSPACE_STRUCTURE.md  analyze_log.bat  backup_database.sh  broadcast.py  (+23 more)
.github/: copilot-instructions.md
archive/: INDEX.md  README.md
audio generation/: test_input.txt
chatterbox/: cli_demo.py  gradio_tts_turbo_app.py
checkpoints/: checkpoint_20260121_184817.json
chroma_db/: chroma.sqlite3
crash_test_checkpoints/: checkpoint_20260121_113209.json  checkpoint_20260121_113223.json  checkpoint_20260121_113239.json
data/: dj_personalities.json
docs/: ARCHITECTURE.md  BUGFIX_SECTION_EXTRACTION.md  DJ_KNOWLEDGE_SYSTEM.md  IMPLEMENTATION_SUMMARY.md  INLAND_ESP32_SPECS.md  JULIE_VOICE_TRAINING_GUIDE.md  LOCAL_TESTING_PLAN.md  METADATA_ENRICHMENT_V2_PLAN.md  MODEL_CONFIGURATION.md  MUSIC_IDENTIFIER_QUICKSTART.md  PHASE5_MOBILE_TEST_RESULTS.md  PHASE7_COMPLETE.md  PHASE7_MULTI_TEMPORAL_STORY_SYSTEM.md  PHASE7_PROGRESS_WEEK3.md  PRESERVE_XML_STRUCTURE_IN_CHROMADB.md  SCRIPT_GENERATOR_V2_IMPLEMENTATION_GUIDE.md  SHOULD_ANSWER_QUESTIONS_RECOMMENDATIONS.md  SYSTEM_SPECS.md  plan.md
esp32_ai_radio.egg-info/: PKG-INFO
firmware/: README.md
include/: BluetoothManager.h  WifiTime.h
logs/: README.md
music/: README.md
output/: broadcast_Julie_2day_stories_20260121_122516.json  broadcast_Julie_2hr_20260121_112509.json  julie_daily_broadcast.json  (+10 more)
(+940 files in other folders)
