[project]
name = "esp32-ai-radio"
version = "1.0.0"
description = "AI-driven radio station for ESP32 with Fallout Wiki knowledge base"
requires-python = ">=3.10"
dependencies = [
    # XML and Wikitext Parsing
    "mwparserfromhell>=0.6.4",
    
    # Vector Database
    "chromadb>=0.4.0",
    
    # Embeddings and ML
    "sentence-transformers>=2.2.0",
    "transformers>=4.30.0",
    "scikit-learn>=1.3.0",
    "numpy>=1.24.0",
    
    # Data Validation
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    
    # Web and API
    "requests>=2.31.0",
    
    # CLI and Progress
    "tqdm>=4.65.0",
    
    # Templating
    "jinja2>=3.1.0",
    
    # Utilities
    "psutil>=5.9.0",
    "textstat>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["tools"]

[tool.setuptools.package-data]
tools = ["**/*.json", "**/*.md", "**/*.j2"]

[tool.pytest.ini_options]
testpaths = ["tests", "tools/wiki_to_chromadb/tests", "tools/script-generator/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=tools --cov-report=term-missing --ignore=tools/script-generator/tests/test_phase4_mocks_and_integration.py --ignore=tools/script-generator/tests/test_phase5_integration.py"
markers = [
    "mock: tests using mock clients",
    "integration: tests requiring real dependencies (Ollama/ChromaDB)",
    "slow: slow running tests",
    "e2e: end-to-end workflow tests",
    "requires_ollama: tests requiring Ollama server",
    "requires_chromadb: tests requiring ChromaDB database",
]

[tool.black]
line-length = 100
target-version = ["py310"]
exclude = '''
/(
    \.git
  | \.pytest_cache
  | __pycache__
  | archive
  | firmware
)/
'''

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = ["archive", "firmware", "__pycache__", ".pytest_cache"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
exclude = ["archive", "firmware"]
